--- a/Homework 13/index.html
+++ b/Homework 13/index.html
@@ -26,7 +26,7 @@
     </tbody>
     <tr id="button_row">
         <td colspan="3" class="button_row">
-            <strong class="text" onclick="add_row()">ADD ROW</strong>
+            <strong class="text">ADD ROW</strong>
         </td>
     </tr>
 </table>
